--- a/style.css
+++ b/style.css
@@ -5,5 +5,41 @@
 .container {
     text-align: center;
     display: flex;
+    flex-direction: column;
     gap: 4px;
+    font-family: system-ui, -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen, Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif;
+}
+.header {
+    background-color: #1F2937;
+    color: white;
+    display: flex;
+    align-items: center;
+    justify-content: space-between;
+    padding: 10px 100px;
+}
+.logo {
+    font-size: 20px;
+    font-weight: bold;
+}
+.menu {
+    color: grey;
+    
+}
+  
+.menu ul {
+    list-style: none;
+    margin: 10px;
+    padding: 0;
+    display: flex;
+}
+  
+.menu ul li {
+    margin-left: 20px;
+    font-size: 16px;
+    cursor: pointer;
+}
+.footer {
+    background-color: #1F2937;
+    color: white;
+    padding: 20px;
 }
