--- a/style.css
+++ b/style.css
@@ -91,3 +91,45 @@
     text-align: center;
     margin: 100px;
 }
+.infor-section {
+    display: flex;
+    align-items: center;
+    flex-direction: column;
+    padding-bottom: 110px;
+}
+
+.infor-header {
+    font-size: 36px;
+    color: #1F2937;
+    font-weight: 900;
+    padding: 50px 0;
+}
+
+.illustration {
+    width: 180px;
+    height: 160px;
+    border: 2px solid #3882F6;
+    border-radius: 10px;
+    margin: 0 20px;
+    border-width: thick;
+}
+
+.illustrations {
+    display: flex;
+    justify-content: space-between;
+}
+
+.one, .two, .three, .four {
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+}
+
+.subtext {
+    max-width: 160px;
+}
+.subtext p {
+    text-align: center;
+    margin-top: 10px;
+    color: gray;
+}
