--- a/style.css
+++ b/style.css
@@ -8,6 +8,7 @@
     flex-direction: column;
     font-family: system-ui, -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen, Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif;
 }
+/* header */
 .header {
     background-color: #1F2937;
     color: white;
@@ -36,11 +37,13 @@
     cursor: pointer;
     color: #E5E7EB;
 }
+/* footer */
 .footer {
     background-color: #1F2937;
     color: white;
     padding: 20px;
 }
+/* hero part */
 .hero {
     display: flex;
     justify-content: space-between;
@@ -91,6 +94,8 @@
     text-align: center;
     margin: 100px;
 }
+
+/* information */
 .infor-section {
     display: flex;
     align-items: center;
@@ -132,4 +137,25 @@
     text-align: center;
     margin-top: 10px;
     color: gray;
+}
+
+/* quote part */
+.quote-part {
+    background-color: #E5E7EB;
+    font-family: light italic;
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+    align-items: center;
+    padding: 80px 0;
+}
+.quote {
+    max-width: 900px;
+    font-size: 36px;
+}
+.author {
+    font-weight: 900;
+    color: #1F2937;
+    padding-left: 600px;
+    font-size: 26px;
 }
