--- a/style.css
+++ b/style.css
@@ -159,3 +159,37 @@
     padding-left: 600px;
     font-size: 26px;
 }
+/* sign-up part */
+.signup-section {
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    padding: 80px 0;
+}
+.signup-content {
+    background-color: #3882F6;
+    width: 1000px;
+    height: 140px;
+    border-radius: 7px;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+}
+.signup-centre {
+    display: flex;
+    justify-content: space-between;
+    align-items: center;
+    width: 800px;
+    color: #F9FAF8;
+}
+.signup-btn {
+    color: #F9FAF8;
+    background-color: #3882F6;
+    border: 2px solid #F9FAF8;
+    width: 100px;
+    height: 40px;
+    border-radius: 5px;
+}
+.signup-button {
+    padding-right: 20px;
+}
